--- a/GestionRecetas/GestionRecetas.csproj
+++ b/GestionRecetas/GestionRecetas.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Seeds\" />
+    <Folder Include="Models\Seed\" />
   </ItemGroup>
 
 </Project>
